Bug-fix bleed after pre-render

--- a/src/sections/About.scss
+++ b/src/sections/About.scss
@@ -3,7 +3,7 @@
 #about {
   break-inside: avoid;
 
-  h2:before {
+  > h2:before {
     content: $fa-var-user-circle-o;
   }
 }
